Fixed spacings

--- a/index.css
+++ b/index.css
@@ -253,7 +253,7 @@ img {
 }
 
 #footer-logo {
-  width: 40%;
+  width: 120px;
 }
 
 .info img {
@@ -382,7 +382,7 @@ footer h3,
   }
 
   #footer-logo {
-    width: 30%;
+    /* width: 30%; */
   }
 }
 
